<resources>
    <string name="app_name">target-list</string>
    <string name="targets">Targets</string>
    <string name="signed_out">Sign out</string>
    <string name="create_target">Create Target</string>
    <string name="target_name">Name</string>
    <string name="description">Description</string>
    <string name="add_goal">Add Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="delete_target">Delete</string>
    <string name="targets_list">Targets List</string>
    <string name="empty_screen_title_targets">You don t have targets now</string>
    <string name="empty_screen_title_completed_targets">You don t have completed
        targets now</string>
    <string name="empty_screen_description_targets">Quickly add your first target</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>

    <string name="about">About</string>
    <string name="contact_us">Contact us</string>
    <string name="your_profile">Your Profile</string>
    <string name="log_out">Log out</string>
    <string name="log_out_question">Are you sure you want to log out?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="warning">Warning</string>
    <string name="warning_description">Please fill all required fields</string>
    <string name="sort_by_deadline">Sort by deadline</string>
    <string name="sort_by_priority">Sort by priority</string>

    <string name="warning_no_internet_connections">No internet connection</string>

    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>


    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
<!--    <string name="sign_in_with_google">Войти через аккаунт Google</string>-->
<!--    <string name="sign_in_with_email">Войти по адресу электронной почты</string>-->
</resources>
