<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tabs_fragment"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_target"
        android:title="@string/targets"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/calendar_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_list_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>
