<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.mandarine.targetList.features.root.MainFragment"
        android:label="MainFragment">

        <action
            android:id="@+id/show_goals"
            app:destination="@id/tabs_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/tabs_fragment"
        android:name="com.mandarine.targetList.features.TabsFragment"
        android:label="TabsFragment">

        <action
            android:id="@+id/next_action"
            app:destination="@+id/target_edit" />
    </fragment>

    <fragment
        android:id="@+id/target_list"
        android:name="com.mandarine.targetList.features.targets.list.TargetsFragment"
        android:label="@string/targets"
        tools:layout="@layout/fragment_target_list">

        <action
            android:id="@+id/next_action"
            app:destination="@+id/target_edit" />
    </fragment>

    <fragment
        android:id="@+id/target_edit"
        android:name="com.mandarine.targetList.features.targets.edit.TargetEditFragment"
        android:label="@string/edit_goal"
        tools:layout="@layout/fragment_target_add">

        <action
            android:id="@+id/show_list"
            app:destination="@+id/tabs_fragment" />

        <argument
            android:name="guid"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/settings_list_fragment"
        android:name="com.mandarine.targetList.features.settings.SettingsListFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings_list">

        <action
            android:id="@+id/sign_in"
            app:destination="@id/mainFragment"/>
    </fragment>

    <fragment
        android:id="@+id/calendar_fragment"
        android:name="com.mandarine.targetList.features.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>
